add jay's photo

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -501,7 +501,7 @@
   full_name: Jay Danielian
   short_name: J. Danielian
   profile_path: /about/#jay-danielian
-  image: /img/people/abraham-lincoln.png
+  image: /img/people/jay-danielian.jpg
   image_description: Photo of Jay Danielian
   position: Software Engineer
   bio: >
