--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -4,27 +4,11 @@
 #   location: Washington DC
 #   order: 10
 
+- title: Java Software Engineer
+  url: https://skylight.workable.com/jobs/884561
+  location: Washington DC
+  order: 10
 - title: Digital Transformation Lead
   url: https://skylight.workable.com/jobs/819900
   location: Remote
-  order: 10
-- title: Data Engineer
-  url: https://skylight.workable.com/jobs/860144
-  location: Remote
   order: 20
-- title: Frontend React Developer
-  url: https://skylight.workable.com/jobs/860149
-  location: Remote
-  order: 30
-- title: Node.js Developer
-  url: https://skylight.workable.com/j/7BBAEC86D7
-  location: Remote
-  order: 40
-- title: DevOps Consultant
-  url: https://skylight.workable.com/jobs/831195
-  location: Baltimore, MD
-  order: 60
-- title: Administrative Assistant
-  url: https://skylight.workable.com/jobs/827160
-  location: Remote
-  order: 70
