--- a/_data/values.yml
+++ b/_data/values.yml
@@ -31,7 +31,7 @@
 - title: Reward results, not activity.
   statement: >
     Merit &mdash; not politics &mdash; is favored above all else. We employ a performance system
-    that is fair, clear, and objective to measure results.
+    that's fair, clear, and objective to measure results.
   order: 60
 - title: Collaborate for the win.
   statement: >
