--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -8,3 +8,7 @@
   url: https://skylight.workable.com/jobs/884561
   location: Washington DC
   order: 10
+- title: Digital Transformation Lead
+  url: https://skylight.workable.com/jobs/819900
+  location: Washington DC
+  order: 20
