--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -8,7 +8,7 @@
   url: https://skylight.workable.com/jobs/884561
   location: Washington DC
   order: 10
-- title: Digital Transformation Lead
-  url: https://skylight.workable.com/jobs/819900
-  location: Washington DC
+- title: UX Design Lead
+  url: https://skylight.workable.com/jobs/913079
+  location: Baltimore, MD
   order: 20
