--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -8,7 +8,7 @@
   url: https://skylight.workable.com/jobs/884561
   location: Washington DC
   order: 10
-- title: UX Design Lead
+- title: UX Design Leader
   url: https://skylight.workable.com/jobs/913079
   location: Baltimore, MD
   order: 20
