update open positions

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -12,3 +12,15 @@
   url: https://skylight.workable.com/jobs/913079
   location: Baltimore, MD
   order: 20
+- title: UX Researcher
+  url: https://skylight.workable.com/jobs/919848
+  location: Remote
+  order: 30
+- title: Software Engineer
+  url: https://skylight.workable.com/jobs/919836
+  location: Remote
+  order: 40
+- title: Data Engineer
+  url: https://skylight.workable.com/jobs/919832
+  location: Remote
+  order: 50
