--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "Skylight's flagship website",
   "devDependencies": {
-    "grunt": "^1.0.3",
-    "grunt-cli": "^1.2.0",
     "eslint": "^3.19.0",
-    "grunt-accessibility": "^4.2.0"
+    "grunt": "^1.0.3",
+    "grunt-accessibility": "^4.2.0",
+    "grunt-cli": "^1.3.2",
+    "cryptiles": ">=4.1.2"
   },
   "engines": {
     "node": ">=7.10.0"
