add andrew's photo

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -492,7 +492,7 @@
   full_name: Andrew Wagner
   short_name: A. Wagner
   profile_path: /about/#andrew-wagner
-  image: /img/people/george-washington.png
+  image: /img/people/andrew-wagner.jpg
   image_description: Photo of Andrew Wagner
   position: Software Engineer
   bio: >
