change tom's location

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -458,7 +458,7 @@
     His product and technical leadership spans multiple high-profile projects,
     including the GI Bill Comparison Tool and login.gov. He specializes in
     software engineering, product management, and identity management. Tom lives
-    in Oregon.
+    in Minnesota.
   active: true
   order: 130
   socials:
