another bio edit

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -266,7 +266,7 @@
   position: Full Stack Engineer
   bio: >
     Nick is a former member of 18F, who relentlessly pursues creating
-    products that are accessible and meet the needs of all
+    products that are fully accessible and meet the needs of all
     users. He specializes in accessibility, software engineering,
     frontend development, and cloud computing. Nick resides in Virginia.
   active: true
