--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -4,39 +4,48 @@
 #   location: Washington DC
 #   order: 10
 
-- title: Delivery Manager
-  url: https://skylight.workable.com/jobs/976755
-  location: Remote
+- name: Delivery
   order: 10
-- title: UX Designer
-  url: https://skylight.workable.com/jobs/976749
-  location: Remote
+  positions:
+    - title: Delivery Manager
+      url: https://skylight.workable.com/jobs/976755
+      location: Remote
+      order: 10
+    - title: Digital Transformer
+      url: https://skylight.workable.com/jobs/977202
+      location: Remote
+      order: 20
+- name: User Experience
   order: 20
-- title: UX Researcher
-  url: https://skylight.workable.com/jobs/919848
-  location: Remote
+  positions:
+    - title: UX Designer
+      url: https://skylight.workable.com/jobs/976749
+      location: Remote
+      order: 10
+    - title: UX Designer
+      url: https://skylight.workable.com/jobs/977189
+      location: Remote
+      order: 20
+    - title: UX Researcher
+      url: https://skylight.workable.com/jobs/919848
+      location: Remote
+      order: 30
+- name: Development
   order: 30
-- title: Software Engineer
-  url: https://skylight.workable.com/jobs/919836
-  location: Remote
-  order: 40
-- title: Data Engineer
-  url: https://skylight.workable.com/jobs/919832
-  location: Remote
-  order: 50
-- title: Digital Transformer
-  url: https://skylight.workable.com/jobs/977202
-  location: Remote
-  order: 60
-- title: Software Engineer
-  url: https://skylight.workable.com/jobs/977198
-  location: Remote
-  order: 70
-- title: UX Designer
-  url: https://skylight.workable.com/jobs/977189
-  location: Remote
-  order: 80
-- title: Java Software Engineer
-  url: https://skylight.workable.com/jobs/884561
-  location: Washington DC
-  order: 90
+  positions:
+    - title: Software Engineer
+      url: https://skylight.workable.com/jobs/919836
+      location: Remote
+      order: 10
+    - title: Data Engineer
+      url: https://skylight.workable.com/jobs/919832
+      location: Remote
+      order: 20
+    - title: Software Engineer
+      url: https://skylight.workable.com/jobs/977198
+      location: Remote
+      order: 30
+    - title: Java Software Engineer
+      url: https://skylight.workable.com/jobs/884561
+      location: Washington DC
+      order: 40
