--- a/_data/team.yml
+++ b/_data/team.yml
@@ -54,7 +54,7 @@
     software engineering, product management, and cloud computing. Sean lives in
     North Carolina.
   active: true
-  order: 90
+  order: 200
   socials:
     - name: Twitter
       link: https://twitter.com/BeLucid
@@ -92,7 +92,7 @@
     engineering, data science and engineering, engineering management, and agile practices.
     Robert lives in Texas.
   active: true
-  order: 60
+  order: 120
   socials:
     - name: Twitter
       link: https://twitter.com/RobertLeeRead
@@ -166,7 +166,7 @@
     in Internet of Things, distributed and embedded systems engineering,
     networking technologies, and privacy and security. Geoff resides in Colorado.
   active: true
-  order: 100
+  order: 150
   socials:
     - name: Twitter
       link: https://twitter.com/GeoffCMulligan
@@ -197,7 +197,7 @@
     and engineering, cloud computing, and enterprise software.
     He lives in Washington.
   active: true
-  order: 140
+  order: 220
   socials:
     - name: Twitter
       link: https://twitter.com/apievangelist
@@ -237,7 +237,7 @@
     both great platforms and great products. He specializes in DevOps engineering,
     cloud computing, and user-focused software development. Josh resides in Virginia.
   active: true
-  order: 50
+  order: 70
   socials:
     - name: LinkedIn
       link: https://www.linkedin.com/in/joshdorothy/
@@ -270,7 +270,7 @@
     users. He specializes in accessibility, software engineering,
     frontend development, and cloud computing. Nick resides in Virginia.
   active: true
-  order: 80
+  order: 140
   socials:
     - name: Twitter
       link: https://twitter.com/rbristow
@@ -308,7 +308,7 @@
     in design leadership, service design, user experience design, and design research.
     Victor resides in New York.
   active: true
-  order: 30
+  order: 40
   socials:
     - name: Twitter
       link: https://twitter.com/victorzapanta
@@ -375,7 +375,7 @@
     Lara specializes in design leadership, design research, service design,
     and user experience design. Lara lives in New York.
   active: true
-  order: 20
+  order: 30
   socials:
     - name: Twitter
       link: https://twitter.com/lkohl
@@ -400,7 +400,7 @@
     Bureau design+tech fellow. Shashank specializes in digital leadership and transformation,
     digital procurement, software engineering, and cloud computing. He lives in Maryland.
   active: true
-  order: 40
+  order: 50
   socials:
     - name: Twitter
       link: https://twitter.com/gazeti
@@ -433,7 +433,7 @@
     including user interviews, user modeling, usability testing, prototyping, and more.
     Lesley lives in Colorado.
   active: true
-  order: 70
+  order: 130
   socials:
     - name: LinkedIn
       link: https://www.linkedin.com/in/lesley-evans-3b57b79b/
@@ -496,7 +496,7 @@
     and specializes in software engineering, DevOps, microservices, APIs, and
     cloud computing. Andrew lives in Virginia.
   active: true
-  order: 110
+  order: 180
   socials:
     - name: LinkedIn
       link: https://www.linkedin.com/in/andrew-wagner-6675bb8/
@@ -550,7 +550,7 @@
     a positive difference through data science, engineering, and analytics.
     Brandon lives in Ohio.
   active: true
-  order: 130
+  order: 210
   socials:
     - name: LinkedIn
       link: https://www.linkedin.com/in/brandon-mader-5447aaa4/
@@ -563,14 +563,14 @@
   short_name: B. Bartola
   profile_path: /about/#becca-bartola
   image: /img/people/becca-bartola.jpg
-  image_description: Placeholder Photo of Becca Bartola
+  image_description: Photo of Becca Bartola
   position: UX Designer
   bio: >
     Becca is a former Etsy designer, with a passion for creating positive change
     through great user experiences. She specializes in user research, user experience
     design, and visual design. Becca lives in Pennsylvania.
   active: true
-  order: 120
+  order: 190
   socials:
     - name: Twitter
       link: https://twitter.com/rebeccabartola
@@ -588,3 +588,157 @@
       link: /work/team-member/becca-bartola/
       link_description: Becca's Project Work
       fa_icon_name: wrench
+- name: laura-vlassarev
+  fname: Laura
+  lname: Vlassarev
+  full_name: Laura Vlassarev
+  short_name: L. Vlassarev
+  profile_path: /about/#laura-vlassarev
+  image: /img/people/laura-vlassarev.jpg
+  image_description: Photo of Laura Vlassarev
+  position: UX Designer
+  bio: >
+    Laura is a UX researcher, strategist, and designer. She loves to solve
+    complex problems by empathizing with and understanding the needs of users.
+    Laura lives in Colorado.
+  active: true
+  order: 60
+  socials:
+    - name: Twitter
+      link: https://twitter.com/LauraVlassarev
+      link_description: Laura's Twitter Account
+      fa_icon_name: twitter
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/lauragraceking/
+      link_description: Laura's LinkedIn Account
+      fa_icon_name: linkedin
+    - name: Personal Website
+      link: https://www.lauravlassarev.com/
+      link_description: Laura's Personal Website
+      fa_icon_name: home
+- name: victoria-suwardiman
+  fname: Victoria
+  lname: Suwardiman
+  full_name: Victoria Suwardiman
+  short_name: V. Suwardiman
+  profile_path: /about/#victoria-suwardiman
+  image: /img/people/victoria-suwardiman.jpg
+  image_description: Victoria Suwardiman
+  position: UX Researcher
+  bio: >
+    Victoria is a UX researcher, who made the crossover from computer science.
+    She specializes in a number of qualitative and quantitative research
+    techniques, including usability testing, journey mapping, and wireframing.
+    Victoria resides in Massachusetts.
+  active: true
+  order: 160
+  socials:
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/suwardimanvictoria/
+      link_description: Victoria's LinkedIn Account
+      fa_icon_name: linkedin
+- name: abby-raskin
+  fname: Abby
+  lname: Raskin
+  full_name: Abby Raskin
+  short_name: A. Raskin
+  profile_path: /about/#abby-raskin
+  image: /img/people/eleanor-roosevelt.png
+  image_description: Placeholder Photo of Abby Raskin
+  position: Product Manager
+  bio: >
+    Abby is a former member of the U.S. Digital Service, who is
+    drawn to complex problems and passionate about improving the human
+    experience of technology. She specializes in product management and
+    UX research. Abby lives in Illinois.
+  active: true
+  order: 80
+  socials:
+    - name: Twitter
+      link: https://twitter.com/abbyraskin
+      link_description: Abby's Twitter Account
+      fa_icon_name: twitter
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/abbyraskin/
+      link_description: Abby's LinkedIn Account
+      fa_icon_name: linkedin
+- name: gabriel-ramirez
+  fname: Gabriel
+  lname: Ramirez
+  full_name: Gabriel Ramirez
+  short_name: G. Ramirez
+  profile_path: /about/#gabriel-ramirez
+  image: /img/people/abraham-lincoln.png
+  image_description: Placeholder Photo of Gabriel Ramirez
+  position: Full Stack Engineer
+  bio: >
+    Gabriel is a former member of 18F and Pivotal, who is passionate about
+    coaching, mentoring, and technical excellence. He specializes in software engineering,
+    APIs, DevSecOps, cloud computing, data engineering, and data science.
+    Gabriel lives in Texas.
+  active: true
+  order: 90
+  socials:
+    - name: Twitter
+      link: https://twitter.com/gramire1
+      link_description: Gabriel's Twitter Account
+      fa_icon_name: twitter
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/gramire1/
+      link_description: Gabriel's LinkedIn Account
+      fa_icon_name: linkedin
+    - name: GitHub
+      link: https://github.com/geramirez
+      link_description: Gabriel's GitHub Account
+      fa_icon_name: github
+- name: chris-given
+  fname: Chris
+  lname: Given
+  full_name: Chris Given
+  short_name: C. Given
+  profile_path: /about/#chris-given
+  image: /img/people/chris-given.jpg
+  image_description: Photo of Chris Given
+  position: Data Engineer
+  bio: >
+    Chris formerly served with the U.S. Digital Service. He loves
+    untangling complex data and system problems, and making data
+    accessible and useful to everyone. Chris specializes in
+    data engineering, data science, and data analytics.
+    He lives in Illinois.
+  active: true
+  order: 100
+  socials:
+    - name: Twitter
+      link: https://twitter.com/cmgiven
+      link_description: Chris' Twitter Account
+      fa_icon_name: twitter
+    - name: GitHub
+      link: https://github.com/geramirez
+      link_description: Gabriel's GitHub Account
+      fa_icon_name: github
+- name: colin-craig
+  fname: Colin
+  lname: Craig
+  full_name: Colin Craig
+  short_name: C. Craig
+  profile_path: /about/#colin-craig
+  image: /img/people/colin-craig.jpg
+  image_description: Photo of Colin Craig
+  position: Full Stack Engineer
+  bio: >
+    Colin is a former member of 18F, who is passionate about coaching, mentoring,
+    and leading. While at 18F, he served as the technical lead over analytics.usa.gov
+    and everykidinapark.gov. He specializes in software engineering, APIs, DevOps,
+    and data engineering. Colin lives in North Carolina.
+  active: true
+  order: 170
+  socials:
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/colin-craig-92426447/
+      link_description: Colin's LinkedIn Account
+      fa_icon_name: linkedin
+    - name: GitHub
+      link: https://github.com/cacraig
+      link_description: Colin's GitHub Account
+      fa_icon_name: github
