update about page

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -668,8 +668,8 @@
   full_name: Gabriel Ramirez
   short_name: G. Ramirez
   profile_path: /about/#gabriel-ramirez
-  image: /img/people/abraham-lincoln.png
-  image_description: Placeholder Photo of Gabriel Ramirez
+  image: /img/people/gabriel-ramirez.jpg
+  image_description: Photo of Gabriel Ramirez
   position: Full Stack Engineer
   bio: >
     Gabriel is a former member of 18F and Pivotal, who is passionate about
