update about page

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -643,8 +643,8 @@
   full_name: Abby Raskin
   short_name: A. Raskin
   profile_path: /about/#abby-raskin
-  image: /img/people/eleanor-roosevelt.png
-  image_description: Placeholder Photo of Abby Raskin
+  image: /img/people/abby-raskin.jpg
+  image_description: Photo of Abby Raskin
   position: Product Manager
   bio: >
     Abby is a former member of the U.S. Digital Service, who is
