--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -8,23 +8,19 @@
   url: https://skylight.workable.com/jobs/976755
   location: Remote
   order: 10
-- title: UX Designer
-  url: https://skylight.workable.com/jobs/976749
-  location: Remote
-  order: 20
-- title: UX Researcher
-  url: https://skylight.workable.com/jobs/919848
-  location: Remote
-  order: 30
 - title: Software Engineer
   url: https://skylight.workable.com/jobs/919836
   location: Remote
-  order: 40
+  order: 20
 - title: DevOps Engineer
   url: https://skylight.workable.com/jobs/1007323
   location: Remote
-  order: 50
+  order: 30
 - title: Data Engineer
   url: https://skylight.workable.com/jobs/919832
   location: Remote
-  order: 60
+  order: 40
+- title: API Engineer
+  url: https://skylight.workable.com/jobs/1053142
+  location: Remote
+  order: 50
