update about page

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -748,11 +748,11 @@
   full_name: Ashley Treni
   short_name: A. Treni
   profile_path: /about/#ashley-treni
-  image: /img/people/eleanor-roosevelt.png
-  image_description: Placeholder Photo of Ashley Treni
+  image: /img/people/ashley-treni.jpg
+  image_description: Photo of Ashley Treni
   position: UX Designer
   bio: >
-    Ashely is a UX researcher and designer, with a background in information 
+    Ashely is a UX researcher and designer, with a background in information
     design and data visualization. As a Design Fellow for the social
     impact incubator, Blue Ridge Labs, she launched and co-founded Justfix.nyc.
     Ashley currently teaches UX design at General Assembly. She lives in New York.
