--- a/_data/capability_groups.yml
+++ b/_data/capability_groups.yml
@@ -50,8 +50,8 @@
     - Lean-Agile Enterprise &amp; DevOps
     - Digital Talent &amp; Fellowship Programs
     - Innovation Labs
-    - Agile Coaching &amp; Training
-    - Instructional Design
+    - Instructional Design & Training
+    - Coaching
     - Agile Project Management
   order: 50
 - name: Policies & Standards
@@ -59,7 +59,9 @@
     - Federal Acquisition Regulation
     - Section 508
     - Paperwork Reduction Act
-    - FISMA
     - Privacy Act
+    - FISMA
+    - HIPAA
+    - FERPA
     - Schedule A(r) Hiring Authority
   order: 60
