update about page

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -811,8 +811,8 @@
   full_name: Marvo Dolor
   short_name: M. Dolor
   profile_path: /about/#marvo-dolor
-  image: /img/people/eleanor-roosevelt.png
-  image_description: Placeholder Photo of Marvo Dolor
+  image: /img/people/marvo-dolor.jpg
+  image_description: Photo of Marvo Dolor
   position: Engagement Manager
   bio: >
     Marvo is a former member of the U.S. Digital Service, where she
