update about page

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -754,7 +754,7 @@
   bio: >
     Ashely is a UX researcher and designer, with a background in information
     design and data visualization. As a Design Fellow for the social
-    impact incubator, Blue Ridge Labs, she launched and co-founded Justfix.nyc.
+    impact incubator, Blue Ridge Labs, she launched and co-founded JustFix.nyc.
     Ashley currently teaches UX design at General Assembly. She lives in New York.
   active: true
   order: 110
@@ -816,10 +816,10 @@
   position: Engagement Manager
   bio: >
     Marvo is a former member of the U.S. Digital Service, where she
-    held multiple executive leadership positions in support of major
+    held multiple leadership positions in support of major
     initiatives at the Veterans Affairs, including vets.gov (now va.gov) and
-    the Appeals Modernization. She specializes in digital leadership,
-    strategy & operations, and product management. Marvo lives in Maryland.
+    Appeals Modernization. She specializes in digital strategy and leadership,
+    operations, and product management. Marvo lives in Maryland.
   active: true
   order: 20
   socials:
