--- a/_data/team.yml
+++ b/_data/team.yml
@@ -752,7 +752,7 @@
   image_description: Photo of Ashley Treni
   position: UX Designer
   bio: >
-    Ashely is a UX researcher and designer, with a background in information
+    Ashley is a UX researcher and designer, with a background in information
     design and data visualization. As a Design Fellow for the social
     impact incubator, Blue Ridge Labs, she launched and co-founded JustFix.nyc.
     Ashley currently teaches UX design at General Assembly. She lives in New York.
