update about page

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -818,7 +818,7 @@
   bio: >
     Marvo is a former member of the U.S. Digital Service, where she
     held multiple leadership positions in support of major
-    initiatives at the Veterans Affairs, including vets.gov (now va.gov) and
+    initiatives at the Veterans Affairs, including Vets.gov (now VA.gov) and
     Appeals Modernization. She specializes in digital strategy and leadership,
     operations, and product management. Marvo lives in Maryland.
   active: true
