--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -4,15 +4,23 @@
 #   location: Washington DC
 #   order: 10
 
-- title: Software Engineer
-  url: https://skylight.workable.com/jobs/919836
+- title: Product Manager
+  url: https://skylight.workable.com/jobs/1083508
   location: Remote
   order: 10
-- title: DevOps Engineer
-  url: https://skylight.workable.com/jobs/1007323
+- title: UX Researcher
+  url: https://skylight.workable.com/jobs/1083246
   location: Remote
   order: 20
-- title: Data Engineer
-  url: https://skylight.workable.com/jobs/919832
+- title: UX Designer
+  url: https://skylight.workable.com/jobs/1083270
   location: Remote
   order: 30
+- title: Sofware Engineer
+  url: https://skylight.workable.com/jobs/1083190
+  location: Remote
+  order: 40
+- title: DevOps Engineer
+  url: https://skylight.workable.com/jobs/1083314
+  location: Remote
+  order: 50
