update about page

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -370,7 +370,7 @@
   position: UX Designer
   bio: >
     Lara is a former member of the U.S. Digital Service, where she
-    served as the UX lead over the Appeals Modernization initiative.
+    served as the UX lead over the Veteran Appeals Modernization initiative.
     She's also a former professor at NYU, SUNY, and Pratt Institute.
     Lara specializes in design leadership, design research, service design,
     and user experience design. Lara lives in New York.
