--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -24,3 +24,7 @@
   url: https://skylight.workable.com/jobs/1083314
   location: Remote
   order: 50
+- title: Security Lead
+  url: https://skylight.workable.com/jobs/1093809
+  location: Remote
+  order: 60
