update open positions

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -28,3 +28,7 @@
   url: https://skylight.workable.com/jobs/1093809
   location: Remote
   order: 60
+- title: Digital Transformer
+  url: https://skylight.workable.com/jobs/1095653
+  location: Remote
+  order: 70
